--- a/src/assets/styles/components/inner-footer.scss
+++ b/src/assets/styles/components/inner-footer.scss
@@ -92,12 +92,15 @@
 .mobile {
     .inner-footer {
         --v-padding: 28px;
-        width: calc(100% + 20px);
+        width: calc(100%);
         margin-left: calc(20px * -0.5);
         margin-right: calc(20px * -0.5);
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 0px;
+        padding-right: 0px;
         row-gap: 20px;
+        margin-left: 0;
+        margin-right: 0;
+        overflow: hidden;
 
         &__subtitle {
             
